# assurecare

./: .gitignore  README.md  assure_dynamic_bot.py  assurebot.py  pi4_deploy.sh  prompt.py  pyproject.toml  update_and_deploy.sh
deploy/systemd/: assure_dynamic_bot.service
